Ajuste para visualização móvel

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
 
   <title>Editora Balaio</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <meta name="description" content="Editora Balaio">
   <meta name="author" content="Mariana Rodrigues e Filipe Miranda">
 
