--- a/index.html
+++ b/index.html
@@ -22,18 +22,11 @@
     </div>
   </header>
   <main>
-    <div class="projeto row reverse">
-      <div class="col-6 col-4-md">
-        <img src="img/paisagem.png" />
-      </div>
-      <div class="col-6 col-8-md">
-        <h2>Paisagem de Vento</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <a href="#">Saiba mais</a>
-      </div>
-    </div>
+    <h1>Projetos</h1>
+    <h2>BALAIO + NÚCLEO DE CINEMA DE ANIMAÇÃO DE CAMPINAS</h2>
+    <p>
+      A Balaio tem uma parceria com o Núcleo de Cinema de Animação de Campinas para publicação de livros teóricos sobre a arte de animar.
+    </p>
     <div class="projeto row">
       <div class="col-6 col-4-md">
         <img src="img/poetica.png" />
@@ -41,7 +34,19 @@
       <div class="col-6 col-8-md">
         <h2>Poética da Ilusão de Movimento</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Do autor português José-Manuel Xavier, o livro é uma grande reflexão acerca da poesia da animação e a arte da abstração. “Um dos primeiros livros sobre a filosofia da animação que deve nortear o animador antes, durante e depois da realização sua obra”, trecho do prefácio de Wilson Lazaretti.
+        </p>
+        <p class="ficha-tecnica">
+          Texto: José-Manuel Xavier
+          Edição: Filipe Miranda
+          Produção: Núcleo de Cinema de Animação de Campinas
+          Revisão: Mariana Rodrigues
+          Diagramação e projeto gráfico: Mariana Rodrigues
+          Ilustração da capa: José-Manuel Xavier
+          ISBN: 978-84-30565-00-9
+          Páginas: 160
+          Tiragem: 200
+          Formato: 16x23 cm
         </p>
         <a href="#">Saiba mais</a>
       </div>
@@ -53,11 +58,60 @@
       <div class="col-6 col-8-md">
         <h2>Manual do Pequeno Animador</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Wilson Lazaretti já viajou o Brasil e o mundo dando oficinas de animação, é também um dos fundadores do Núcleo de Cinema de Animação de Campinas, neste livro ele reúne as instruções básicas para um animador iniciante e muita história sobre a história da animação, com uma leitura divertida e cheia de ilustrações.
+        </p>
+        <p class="ficha-tecnica">
+          Texto: Wilson Lazaretti
+          Ilustrações: Radostina Neykova; Gergana Diankova e Filipe Miranda
+          Consultoria de conteúdo: Patrícia Alves Dias
+          Produção: Núcleo de Cinema de Animação de Campinas
+          Revisão e diagramação: Mariana Rodrigues
+          Edição, projeto gráfico e capa: Mariana Rodrigues e Filipe Miranda
+          ISBN: 978-65-00-00318-5
+          Páginas: 128
+          Tiragem: 500
+          Formato: 16x23 cm
         </p>
         <a href="#">Saiba mais</a>
       </div>
     </div>
+    <h2>BALAIO + INSTITUTO THOMAZ PERINA</h2>
+    <p>
+      A Balaio tem uma parceria com o Instituto Thomaz Perina para produção e publicação de livros ilustrados sobre a vida e obra do artista plástico.
+    </p>
+    <div class="projeto row reverse">
+      <div class="col-6 col-4-md">
+        <img src="img/paisagem.png" />
+      </div>
+      <div class="col-6 col-8-md">
+        <h2>Paisagem de Vento</h2>
+        <p>
+          A trajetória artística de Thomaz Perina contada com simplicidade e ilustrações feitas com carvão. Autoria de Filipe Miranda e Mariana Rodrigues.
+        </p>
+        <p class="ficha-tecnica">
+          Texto: Mariana Rodrigues
+          Ilustração: Filipe Miranda
+          Idealização e edição: Maria Angelina dos Santos (Instituto Thomaz Perina)
+          Revisão: Cleide Salme
+          Diagramação e projeto gráfico: Mariana Rodrigues e Filipe Miranda
+          ISBN: 978-85-54146-00-9
+          Páginas: 32
+          Tiragem: 2000
+          Formato: 20x20 cm
+        </p>
+        <a href="#">Saiba mais</a>
+      </div>
+    </div>
+    <h1>Dentro do Balaio</h1>
+    <p>
+      A Balaio é uma casa de fazer livros: uma pequena editora de livros ilustrados e uma realizadora de projetos editoriais. Acreditamos que cada livro é um mundo particular, com uma narrativa, uma estética e uma materialidade própria. Por isso cada projeto é cuidadosamente pensado com dedicação e importância.
+    </p>
+    <p>
+      Somos do interior do São Paulo, carregamos conosco calmaria e conversa boa. Foi assim que nasceu a Balaio, em um dos nossos tantos cafés sobre livros e memórias de infância do Filipe em meio aos cestos de vime que o seu avô Augusto fazia.
+    </p>
+    <p>
+      Qualquer dúvida pode entrar em contato com a gente, vamos adorar conversar.
+    </p>
   </main>
   <footer>
 
