Ajustes de layout e primeiras imagens dos livros

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
   </header>
   <main>
+    <div class="separador"></div>
     <h1>Projetos</h1>
     <h2>BALAIO + NÚCLEO DE CINEMA DE ANIMAÇÃO DE CAMPINAS</h2>
     <p>
@@ -29,7 +30,7 @@
     </p>
     <div class="projeto row">
       <div class="col-6 col-4-md">
-        <img src="img/poetica.png" />
+        <img src="img/poetica.jpg" />
       </div>
       <div class="col-6 col-8-md">
         <h2>Poética da Ilusão de Movimento</h2>
@@ -53,7 +54,7 @@
     </div>
     <div class="projeto row reverse">
       <div class="col-6 col-4-md">
-        <img src="img/manual.png" />
+        <img src="img/manual.jpg" />
       </div>
       <div class="col-6 col-8-md">
         <h2>Manual do Pequeno Animador</h2>
@@ -81,7 +82,7 @@
     </p>
     <div class="projeto row reverse">
       <div class="col-6 col-4-md">
-        <img src="img/paisagem.png" />
+        <img src="img/paisagem.jpg" />
       </div>
       <div class="col-6 col-8-md">
         <h2>Paisagem de Vento</h2>
@@ -102,6 +103,7 @@
         <a href="#">Saiba mais</a>
       </div>
     </div>
+    <div class="separador"></div>
     <h1>Dentro do Balaio</h1>
     <p>
       A Balaio é uma casa de fazer livros: uma pequena editora de livros ilustrados e uma realizadora de projetos editoriais. Acreditamos que cada livro é um mundo particular, com uma narrativa, uma estética e uma materialidade própria. Por isso cada projeto é cuidadosamente pensado com dedicação e importância.
